[workspace]
resolver = "3"
members = ["plugins/geckos-tuner", "plugins/geckos-meter"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
truce = { version = "6.3" }
truce-gui = { version = "6.3" }
truce-gui-types = { version = "6.3" }
truce-clap = { version = "6.3" }
truce-vst3 = { version = "6.3" }
truce-au = { version = "6.3" }
truce-standalone = { version = "6.3" }

clap-sys = "0.5"

truce-test = { version = "6.3.0" }
truce-driver = { version = "6.3.0" }

[profile.shell]
inherits = "release"
