[package]
name = "geckos-audio-meter"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "geckos-audio-meter-standalone"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = ["clap", "vst3", "standalone"]
clap = ["dep:truce-clap", "dep:clap-sys"]
vst3 = ["dep:truce-vst3"]
standalone = ["dep:truce-standalone"]
shell = ["truce/shell"]
rt-paranoid = ["truce/rt-paranoid"]

[dependencies]
truce = { workspace = true }
truce-gui-types = { workspace = true }
truce-gui = { workspace = true }
truce-clap = { workspace = true, optional = true }
truce-vst3 = { workspace = true, optional = true }
truce-standalone = { workspace = true, features = ["gui"], optional = true }
clap-sys = { version = "0.5", optional = true }

[dev-dependencies]
truce-test = { workspace = true }
truce-driver = { workspace = true }
